--- a/lightest.config
+++ b/lightest.config
@@ -1,1 +1,2 @@
-case_report=true ; To set if the tester will offer the case report. true / false.
+ ; A space must be put in front of a comment mark(';').
+case_report = true ; To set if the tester will offer the case report. true / false.
