A bit CMake support and update README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,10 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Lightest)
 
-add_executable(Lightest test.cpp)
+set(build_example false)
+
+if(${build_example})
+    add_executable(Lightest ./src/example.cpp)
+else()
+    add_executable(Lightest ./src/test.cpp)
+endif()
