Update final report and README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 3.10)
 project(Lightest)
 
 set(build_example false)
+# To build example
+set(build_example true)
+
 set(CMAKE_CXX_STANDARD 11)
 
 if(${build_example})
