Better use of CMake, refactor, fix that timer returns integer while unit is us, and update README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,12 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Lightest)
 
-set(CMAKE_CXX_STANDARD 11)
+# Build Lightest to a header-only library
 
-file(GLOB SRC_FILES
-    "${PROJECT_SOURCE_DIR}/src/*.h"
-    "${PROJECT_SOURCE_DIR}/src/*.cpp")
+add_library(${PROJECT_NAME} INTERFACE)
+add_library(lightest::lightest ALIAS ${PROJECT_NAME})
+target_include_directories(${PROJECT_NAME} INTERFACE ${PROJECT_SOURCE_DIR}/include)
 
-add_executable(${CMAKE_PROJECT_NAME} ${SRC_FILES})
+# Do not use CTest, for testing outputs should be given out by Lightest
+
+add_subdirectory(${PROJECT_SOURCE_DIR}/test)
