Add data analyzing function

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.10)
 
 project(LightestTest)
 
-add_executable(${PROJECT_NAME} core_test.cpp)
-target_link_libraries(${PROJECT_NAME} lightest::lightest)
+add_executable(LightestCoreTest core_test.cpp)
+target_link_libraries(LightestCoreTest lightest::lightest)
+
+add_executable(LightestDataAnalysisExtTest data_analysis_ext_test.cpp)
+target_link_libraries(LightestDataAnalysisExtTest lightest::lightest)
 
 # Do not use CTest, for testing outputs should be given out by Lightest
