--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,8 +4,8 @@ project(LightestTest)
 
 add_executable(LightestCoreTest core_test.cpp)
 target_link_libraries(LightestCoreTest lightest::lightest)
+add_test(LightestCoreTest LightestCoreTest)
 
 add_executable(LightestDataAnalysisExtTest data_analysis_ext_test.cpp)
 target_link_libraries(LightestDataAnalysisExtTest lightest::lightest)
-
-# Do not use CTest, for testing outputs should be given out by Lightest
+add_test(LightestDataAnalysisExtTest LightestDataAnalysisExtTest)
