--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -8,9 +8,8 @@ project(LightestBenchmark)
 # Compared with GTest, so GTest should be pre-installed
 find_package(GTest REQUIRED)
 
-# Generate benchmark source files via Python:
-# python generate_lightest_test.py
-# python generate_gtest_test.py
+# Call Python generators for Lightest & GTest
+# ./generate_tests.sh
 
 add_executable(LightestBenchmarkLightest lightest_test.cpp)
 target_link_libraries(LightestBenchmarkLightest lightest::lightest)
