Update CMake config and support not building Gtest benchamrk

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -5,8 +5,7 @@ project(LightestBenchmark)
 # To build benchmark:
 # cmake -Dbenchmark=on
 
-# Compared with GTest, so GTest should be pre-installed
-find_package(GTest REQUIRED)
+
 
 # Call Python generators for Lightest & GTest
 # ./generate_tests.sh
@@ -14,6 +13,11 @@ find_package(GTest REQUIRED)
 add_executable(LightestBenchmarkLightest lightest_test.cpp)
 target_link_libraries(LightestBenchmarkLightest lightest::lightest)
 
-include_directories(${GTEST_INCLUDE})
-add_executable(LightestBenchmarkGTest gtest_test.cpp)
-target_link_libraries(LightestBenchmarkGTest ${GTEST_BOTH_LIBRARIES} pthread)
+# Sometimes need to ignore GTest build
+if(NOT gtest STREQUAL off)
+  # Compared with GTest, so GTest should be pre-installed
+  find_package(GTest REQUIRED)
+  include_directories(${GTEST_INCLUDE})
+  add_executable(LightestBenchmarkGTest gtest_test.cpp)
+  target_link_libraries(LightestBenchmarkGTest ${GTEST_BOTH_LIBRARIES} pthread)
+endif()
