Add benchmark for async testing and update comment

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -5,13 +5,14 @@ project(LightestBenchmark)
 # To build benchmark:
 # cmake -Dbenchmark=on
 
-
-
 # Call Python generators for Lightest & GTest
 # ./generate_tests.sh
 
 add_executable(LightestBenchmarkLightest lightest_test.cpp)
 target_link_libraries(LightestBenchmarkLightest lightest::lightest)
+
+add_executable(LightestBenchmarkLightestAsync lightest_async_test.cpp)
+target_link_libraries(LightestBenchmarkLightestAsync lightest::lightest)
 
 # Sometimes need to ignore GTest build
 if(NOT gtest STREQUAL off)
