Add -r0 for async testing through .github/basic_tests.yml

--- a/.github/workflows/basic_tests.yml
+++ b/.github/workflows/basic_tests.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Run
         run: |
           cd build/test
-          ./LightestCoreTest -r0 && ./LightestDataAnalysisExtTest -r0 && ./LightestAsyncTestExtTest
+          ./LightestCoreTest -r0 && ./LightestDataAnalysisExtTest -r0 && ./LightestAsyncTestExtTest -r0
